# metaverse-research-landscape-2007-2020

./: .gitignore  2007-2016.py  2017-2020.py  README.md  pyproject.toml  rename_metaverse_figures.ps1
archive/: README.md
