[project]
name = "metaverse-research-landscape"
version = "0.1.0"
description = "A reproducible Python project for visualizing the evolution of Metaverse research from 2007 to 2020."
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "pandas",
    "numpy",
    "networkx",
    "matplotlib",
    "scikit-learn",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
